--- a/user_guide/package.json
+++ b/user_guide/package.json
@@ -16,13 +16,15 @@
   "dependencies": {
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/react-loadable": "^5.5.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-plugin-openapi-docs": "^1.2.2",
     "docusaurus-theme-openapi-docs": "^1.2.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redocusaurus": "^1.4.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1"
