--- a/user_guide/package.json
+++ b/user_guide/package.json
@@ -24,7 +24,10 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "redocusaurus": "^1.4.0"
+    "react-dropdown": "^1.11.0",
+    "react-router-dom": "^6.4.3",
+    "redocusaurus": "^1.4.0",
+    "semantic-ui-react": "^2.1.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1"
