Kurento Ecosystem Blog

--- a/user_guide/blog/authors.yml
+++ b/user_guide/blog/authors.yml
@@ -2,6 +2,6 @@ pratibha:
   name: Pratibha
   title: Product Manager, HooT.mx
 
-admin:
-  name: Admin
-  title: Chief Architect
+amar:
+  name: Amar Akshat
+  title: Sous-chef
