--- a/user_guide/package.json
+++ b/user_guide/package.json
@@ -23,6 +23,7 @@
     "docusaurus-theme-openapi-docs": "^1.2.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "redocusaurus": "^1.4.0"
   },
